# mystia-steward-companion

./: .gitignore  NOTICE  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/companion/: index.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/companion/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/capabilities/: default.json
apps/companion/src-tauri/icons/: icon.icns
apps/companion/src-tauri/src/: main.rs
apps/companion/src/companion/: ModWorkbench.tsx  api.ts  automation-state.ts  formatters.ts  (+5 more)
apps/companion/tests/: companion-launcher.test.mjs  night-business-continuity.test.mjs  order-capture-regression.test.mjs  rare-guest-avatar.test.mjs  sprite-resolution.test.mjs
docs/: addressables-tag-mapping-playbook.md  development-conventions.md  local-release.md  mystia-steward-companion-progress.md  repo-memory.md  special-business-scenes-notes.md  tmi-cooking-mechanics-knowledge-base.md
mods/bepinex/: .gitignore  MystiaStewardCompanion.BepInEx.csproj  README.dev.md  README.md
mods/bepinex/Data/: beverages.json  customer_normal.json  food-tag-id-map.json
mods/bepinex/References/: README.md
mods/bepinex/docs/: IMPLEMENTATION_PLAN.md  RUNTIME_PROVIDER_NOTES.md
mods/bepinex/tools/: build-release.ps1  download-build-references.ps1  package-release.ps1  package-release.sh  preflight.ps1  preflight.sh  publish-release.ps1  set-version.ps1  sync-data.sh
scripts/: mock-local-api.mjs  playwright-ui-audit.mjs
(+120 files in other folders)
