[package]
name = "mystia-steward-companion"
version = "1.0.6"
description = "Desktop companion window for mystia-steward-companion"
authors = ["mystia-steward-companion contributors"]
edition = "2021"

[[bin]]
name = "mystia-steward-companion"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
